@@ -180,6 +180,7 @@ class TeredoRelay
 		static unsigned QualificationRetries;
 		static unsigned QualificationTimeOut;
 		static unsigned RestartDelay;
+		static unsigned ServerNonceLifetime;
 #endif
 
 		/*
